[package]
name = "bench"
version = "0.1.0"
authors = ["John Kåre Alsaker <john.kare.alsaker@gmail.com>"]
crate-type = "dylib"

[dependencies]
criterion = { version = "0.2", features=["real_blackbox"] }

[dev-dependencies]
criterion = { version = "0.2", features=["real_blackbox"] }
lazy_static = "1.0"
quickcheck = "0.6.2"

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
lto = false
codegen-units = 1
panic = 'abort'
debug = 2
